raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-10-48-10.ceg/compilation.txt
NT.java:35: error: incompatible types: double cannot be converted to double[]
        double hKurang = tambah(input, bil[1]);
                                          ^
NT.java:39: error: method kurang in class NT cannot be applied to given types;
        double hKali = kurang(bil[2]);
                       ^
  required: double,double[]
  found:    double
  reason: actual and formal argument lists differ in length
NT.java:43: error: method kali in class NT cannot be applied to given types;
        double hBagi = kali(bil[3]);
                       ^
  required: double,double[]
  found:    double
  reason: actual and formal argument lists differ in length
NT.java:48: error: cannot find symbol
        double hAkhir = bagi(bil[4]);
                             ^
  symbol:   variable bil
  location: class NT
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
Not compiled
